Pages projet FR finies

--- a/cv-video.html
+++ b/cv-video.html
@@ -87,7 +87,7 @@
                     <div class="year">2020</div>
                 </div>
                 <div class="type-present noise">AUDIOVISUEL</div>
-                <div class="project-img-present">
+                <div class="project-img-present darker">
                     <img src="assets/img/cv-video/cv-video-cover.jpg" alt="" id="cv-video-img" draggable="false">
                 </div>
             </div>
