--- a/mmi-town.html
+++ b/mmi-town.html
@@ -104,7 +104,7 @@
                     <div class="line-present"></div>
                     <div class="num-present noise">5/9</div>
                 </div>
-                <a class="project-link" href="assets/websites/mmi-town/index.html" target="_blank">VOIR LE
+                <a class="project-link" href="web/mmi-town/index.html" target="_blank">VOIR LE
                     PROJET</a>
             </div>
         </div>
@@ -156,10 +156,11 @@
 
         <div class="project-gallery">
             <img src="assets/img/mmi-town/mmi-town-fullpage.jpg" alt="" draggable="false" class="mmi-town"
-                data-aos="zoom-in" data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true">
+                data-aos="fade-up" data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true">
             <img src="assets/img/mmi-town/desc-mmi.jpg" alt="" draggable="false" class="mmi-town desc-mmi"
-                data-aos="zoom-in" data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true">
-            <img src="assets/img/mmi-town/metier.jpg" alt="" draggable="false" class="mmi-town" data-aos="zoom-in"
+                data-aos="zoom-out" data-aos-duration="1500" data-aos-anchor-placement="top-bottom"
+                data-aos-once="true">
+            <img src="assets/img/mmi-town/metier.jpg" alt="" draggable="false" class="mmi-town" data-aos="zoom-out"
                 data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true">
         </div>
 
@@ -171,34 +172,18 @@
                 </div>
                 <div class="credits-list">
                     <div class="credits-role">
-                        ASSISTANT PHOTOGRAPHE
+                        DÉVELOPPEUSE FULL-STACK
                         <br>
-                        FIGURANT MARKETING
+                        GRAPHISTE
                         <br>
-                        FIGURANT COMMUNICATION
-                        <br>
-                        FIGURANT AUDIOVISUEL
-                        <br>
-                        FIGURANT RÉSEAUX
-                        <br>
-                        FIGURANT DESIGN
-                        <br>
-                        FIGURANT DÉVELOPPEMENT
+                        CHEFFE DE PROJET
                     </div>
                     <div class="credits-name">
-                        <a href="https://paulbarbosa.fr" target="_blank">PAUL BARBOSA</a>
-                        <br>
-                        <a href="https://ydrisstayane.fr" target="_blank">YDRISS TAYANE</a>
-                        <br>
                         <a href="https://rachelalbersario.fr" target="_blank">RACHEL ALBERSARIO</a>
-                        <br>
-                        <a href="https://ilesasma.fr" target="_blank">ILES ASMA</a>
                         <br>
                         <a href="https://julescointrel.fr" target="_blank">JULES COINTREL</a>
                         <br>
-                        <a href="https://thanhtrangluu.fr" target="_blank">THANH-TRANG LUU</a>
-                        <br>
-                        <a href="https://antoineassanvo.fr" target="_blank">ANTOINE ASSANVO</a>
+                        <a href="https://minallad.fr" target="_blank">MINAL LAD</a>
                     </div>
                 </div>
             </div>
@@ -206,7 +191,7 @@
 
         <div class="next-project" data-aos="fade-right" data-aos-duration="1500" data-aos-anchor-placement="top-bottom"
             data-aos-once="true" data-aos-delay="300">
-            <a href="cv-video.html" class="project-link">CV VIDÉO ➔</a>
+            <a href="cv-numerique.html" class="project-link">CV NUMÉRIQUE ➔</a>
         </div>
     </section>
 
