Correction responsive home

--- a/en/about.html
+++ b/en/about.html
@@ -80,7 +80,7 @@
             <h1 data-aos="fade-right" data-aos-duration="1500" data-aos-anchor-placement="top-bottom"
                 data-aos-once="true">ABOUT</h1>
             <div class="about-wrapper">
-                <img src="../assets/img/a-propos/profil.jpg" alt="" class="noise" data-aos="fade-right"
+                <img src="../assets/img/a-propos/profil.jpg" alt="" draggable="false" data-aos="fade-right"
                     data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true"
                     data-aos-delay="200">
                 <div class="wrapper-para">
