--- a/en/slyde.html
+++ b/en/slyde.html
@@ -208,7 +208,7 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
-    <script src="assets/js/project-hover.js"></script>
+    <script src="../assets/js/project-hover.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://unpkg.com/kursor"></script>
     <script>
